--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,5 @@
 {
-    "windowTitle": "Ebiten Game Jam",
+    "windowTitle": "ANTony & CleopatROACH",
     "targetFPS": 60,
     "debugDraw": false,
     "resolution": {
