--- a/data/config.json
+++ b/data/config.json
@@ -2,11 +2,11 @@
     "windowTitle": "ANTony & CleopatROACH",
     "targetFPS": 60,
     "debugDraw": false,
-    "skipMenu": true,
+    "skipMenu": false,
     "resolution": {
         "external": {
-            "w": 1400,
-            "h": 900
+            "w": 1000,
+            "h": 800
         },
         "internal": {
             "w": 800,
