added bg to narration, added circle when unit orders are given, more tutorials and buttons that press down

--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,7 @@
 {
     "windowTitle": "ANTony & CleopatROACH",
     "targetFPS": 60,
+    "muteAudio": false,
     "debugDraw": false,
     "skipMenu": false,
     "startingLevel": 0,
