--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,14 +21,15 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
+env:
+  ITCH_USERNAME: digdugdiggy
+  ITCH_GAME_ID: antony-and-cleopatroach
 jobs:
   # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-      ITCH_USERNAME: digdugdiggy
-      ITCH_GAME_ID: antony-and-cleopatroach
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -52,7 +53,6 @@ jobs:
           itchUsername: ${{env.ITCH_USERNAME}}
           itchGameId: ${{ env.ITCH_GAME_ID }}
           buildChannel: webgl
-          buildNumber: ${{ needs.version.outputs.version_hash }}
 
       - name: Archive artifacts
         uses: actions/upload-artifact@v4
