--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy To GH Pages
+name: Deploy To GH Pages and Itch.io
 
 on:
   # Runs on pushes targeting the default branch
